# pvits

./: .gitignore  README.md  pyproject.toml  test.py
exp/jsut/01_data/01_prepare/: dummy.sh
exp/jsut/01_data/02_preprocess/: run.sh
exp/jsut/period_vits/01_train/: run.sh
exp/jsut/period_vits/02_syn/: run.sh
exp/jsut/xvits/01_train/: run.sh  test.sh
exp/ljspeech/01_data/: .gitignore
exp/ljspeech/01_data/01_preprocess/: dummy.sh
exp/ljspeech/bert_period_vits/01_train/: run.sh
exp/ljspeech/bert_period_vits/02_syn/: run.sh
exp/ljspeech/period_vits/01_train/: run.sh  test.sh
exp/ljspeech/period_vits/02_syn/: run.sh
exp/ljspeech/xvits/01_train/: run.sh  test.sh
exp/ljspeech/xvits/02_syn/: run.sh
src/x_vits/datasets/: __init__.py  single.py
src/x_vits/frontend/: ja.py
src/x_vits/frontend/en/: __init__.py  cleaners.py  cmudict.py  symbols.py
src/x_vits/layers/: __init__.py  activations.py  amp.py  norm.py  nsf.py  pe.py  pqmf.py  transformer.py  wavenet.py
src/x_vits/lit_modules/: __init__.py  base.py  bert_period_vits.py  period_vits.py  xvits.py
src/x_vits/losses/: __init__.py  forwardsum.py  kl.py  mel.py  stft.py
src/x_vits/models/: __init__.py  bert_period_vits.py  discriminator.py  period_vits.py  xvits.py
src/x_vits/modules/: __init__.py  alignment.py  diffusion.py  embedder.py  encoder.py  flow.py  frame_prior.py  handler.py  predictor.py  transformer.py  vocoder.py
src/x_vits/transforms/: __init__.py  mel.py
src/x_vits/utils/: const.py  model.py
